virtual-svc-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "virtual-service-gateway-c4"
spec:
  hosts:
  - "*"
  gateways:
  - "service-gateway-c4"
  http:
  - match:
    - uri:
        prefix: /api/v1
    route:
    - destination:
        host: "c4-active"
        port:
          number: 8080
